added target="_blank" to social links in footer to open links in new tab

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
 			<ul class="icons">
 				<li><a href="malito: a.saeedmohamed455@gmail.com" class="fa brands fa-envelope"></a>
 				</li>
-				<li><a href="https://www.instagram.com/habibtis.916/" class="icon brands fa-instagram"><span
-							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/AbdulrahmanMohamed-debug/" class="icon brands fa-github"><span
-							class="label">Github</span></a></li>
-				<li><a href="https://www.linkedin.com/in/in-abdelrahman-mohamed/" class="icon brands fa-linkedin"><span
-							class="label">Dribbble</span></a></li>
+				<li><a href="https://www.instagram.com/habibtis.916/" class="icon brands fa-instagram"
+						target="_blank"><span class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/AbdulrahmanMohamed-debug/" class="icon brands fa-github"
+						target="_blank"><span class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/in-abdelrahman-mohamed/" class="icon brands fa-linkedin"
+						target="_blank"><span class="label">Dribbble</span></a></li>
 			</ul>
 
 			<ul class="copyright">
